<resources>
    <string name="app_name">RadarChart</string>
    <string name="group">Group</string>
    <string name="group_empty">Tap the + button to create a group!</string>
    <string name="title">Title</string>
    <string name="input_the_title">Enter a title</string>
    <string name="group_color">Group color</string>
    <string name="icon">Icon</string>
    <string name="number_of_items">Number of items</string>
    <string name="maximum_value_of_the_graph">Maximum value of the graph</string>
    <string name="item_name">Item Name</string>
    <string name="save">Save</string>
    <string name="select_a_color">Select a color</string>
    <string name="set_group_icon">Do you want to set an icon for the group?</string>
    <string name="select">Select</string>
    <string name="title_is_empty">Title is empty.</string>
    <string name="maximum_is_empty">Maximum value is empty.</string>
    <string name="maximum_is_illegal">Invalid maximum value.</string>
    <string name="edit">Edit</string>
    <string name="create_new_group">Create new group</string>
    <string name="group_edit">Group edit</string>
    <string name="sort">Reordering</string>
    <string name="sorting_items">Reordering items</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_group_title">Delete this group？</string>
    <string name="delete_group_message">This group and all charts in the group will be deleted. This operation cannot be undone.</string>
    <string name="create_new_chart">Create new chart</string>
    <string name="chart_edit">Chart Edit</string>
    <string name="maximum_value_of_graph">Maximum : %s</string>
    <string name="total_and_average">Total : %1$s &#160;&#160; Average : %2$s</string>
    <string name="comment">Comment</string>
    <string name="set_chart_icon">Do you want to set an icon for the group?</string>
    <string name="delete_chart_title">Delete this chart？</string>
    <string name="delete_chart_message">This operation cannot be undone.</string>
    <string name="setting">Settings</string>
    <string name="created_at">Creation Date</string>
    <string name="created_at_with_value">Created on : %1$s</string>
    <string name="updated_at">Update Date</string>
    <string name="updated_at_with_value">Updated on : %1$s</string>
    <string name="total_value">Total value</string>
    <string name="total_with_value">Total : %1$s</string>
    <string name="asc_order">Asc</string>
    <string name="desc_order">Desc</string>
    <string name="chart_empty">Tap the + button to create a chart!</string>
    <string name="others">Others</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="review_this_app">Review this app</string>
    <string name="license">Licenses</string>
    <string name="app_version_with_value">Version of this app : %1$s</string>
</resources>