<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screen.setting.SettingFragment">

        <!-- ツールバー -->
        <FrameLayout
            android:id="@+id/toolbar"
            style="@style/ToolBar">

            <ImageView
                android:id="@+id/toolbar_close_button"
                style="@style/ToolBarImageButton"
                android:layout_marginStart="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@null"
                android:src="@drawable/ic_baseline_close_24" />

            <TextView
                android:id="@+id/toolBarTitle"
                style="@style/ToolBarTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/setting" />
        </FrameLayout>

        <TextView
            style="@style/LabelBlueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/others" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- プライバシーポリシー -->
            <LinearLayout
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="?android:attr/selectableItemBackground"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_person_outline_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- ライセンス -->
            <LinearLayout
                android:id="@+id/license"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="?android:attr/selectableItemBackground"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_info_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/license"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- このアプリをレビューする -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="?android:attr/selectableItemBackground"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_rate_review_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/review_this_app"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical|end"
                android:text="@string/app_version" />

        </LinearLayout>

    </LinearLayout>
</layout>